--- a/client/src/components/css/Footer.css
+++ b/client/src/components/css/Footer.css
@@ -1,12 +1,134 @@
 /* footer.css */
 
-.footer-container {
+/* .footer-container {
     background-color: #333;
     color: #fff;
     padding: 20px;
     text-align: center;
     bottom: 0;
     width: 97%;
-    background-color: #222; /* Add background color */
-  }
-  
+    background-color: #222; /* Add background color 
+  } */
+
+footer{
+    position: relative;
+    width: 100%;
+    height: auto;
+    padding: 40px;
+    background: #fff;
+}
+
+.footer-container{
+  border-top: 1px solid #493d56;
+    width: 96.5%;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-gap: 100px;
+    padding: 25px;
+} 
+
+.sec h2{
+    position: relative;
+    color:#493d56;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.sec p{
+    color: #493d56;
+}
+
+.sci{
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(4 ,50px);
+}
+
+.sci li{
+    list-style: none;
+}
+
+.sci li a{
+    display: inline-block;
+    width: 36px;
+    height: 36px;
+    background: #493d56;
+    display: grid;
+    align-content: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.sci li a i{
+    color: white;
+    font-size: 20px;
+}
+
+.quicklinks{
+    position: relative;
+}
+
+.quicklinks ul li{
+    list-style: none;
+}
+
+.quicklinks ul li a{
+    color: #493d56;
+    text-decoration: none;
+    margin-bottom: 10px;
+    display: inline-block;
+}
+
+.info{
+    position: relative;  
+}
+
+/* footer .container .contact .info li{
+    display: grid;
+    grid-template-columns: 30px 1fr;
+    margin-bottom: 26px;
+} */
+
+.info li span{
+    color: #ffff;
+    font-size: 20px;
+}
+
+footer .container .contact .info li a{
+    color: #493d56;
+    text-decoration: none;
+}
+
+
+.copyrightText{
+    width: 85.5.7%;
+    background: #fff;
+    padding: 0px 100px 0px;
+    text-align: center;
+    color: #493d56;
+    border-top: 1px solid #493d56;
+}
+
+@media (max-width: 990px){
+    footer{
+        padding: 40px;
+    }  
+    .container{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 20px;
+    } 
+    .copyrightText{
+        padding: 20px 40px 30px;
+    }
+}
+
+@media (max-width: 768px){
+    footer .container{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 20px;
+    }
+}
