--- a/client/src/components/css/Home.css
+++ b/client/src/components/css/Home.css
@@ -75,7 +75,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   justify-content: center;
-  gap: 20px;
+  gap: 75px;
   padding-bottom: 30px;
 }
 
@@ -85,7 +85,7 @@
   border: 1px solid;
   padding-top: 20px;
   border: 0.5px solid black;
-  border-radius: 16px 0px 16px 0px;
+  border-radius: 16px ;
   box-shadow: 2px 2px 8px 0px grey;
   background-color: #fbfafa;
 }
