--- a/client/src/components/css/Footer.css
+++ b/client/src/components/css/Footer.css
@@ -1,22 +1,4 @@
-/* footer.css */
 
-/* .footer-container {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-    bottom: 0;
-    width: 97%;
-    background-color: #222; /* Add background color 
-  } */
-
-/* footer{
-    position: relative;
-    width: 27rem;
-    height: auto;
-    padding: 40px;
-    background: #ffff;
-} */
 
 .footer-container {
     background-color: #ffff;
@@ -25,17 +7,9 @@
     justify-content: space-between; /* Aligns items to the start and end of the container */
     border-bottom: 0.1px solid grey;
     position: sticky ;
-    margin: 0px 10px;
+    margin: 0rem 5rem;
+    box-shadow: 0px 0px 4px 0px grey;
   }
-
-/* .footer-container{
-  border-top: 1px solid #ffff;
-    width: 70;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 100px;
-    padding: 25px;
-}  */
 
 
 .footer-container.sec:h2{
@@ -93,12 +67,6 @@
 .info{
     position: relative;  
 }
-
-/* footer .container .contact .info li{
-    display: grid;
-    grid-template-columns: 30px 1fr;
-    margin-bottom: 26px;
-} */
 
 .info li span{
     color: #ffff;
