--- a/client/src/components/css/about.css
+++ b/client/src/components/css/about.css
@@ -11,11 +11,13 @@
 .about-container h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
+  color:black;
 }
 
 .about-container p {
   font-size: 1.1rem;
   line-height: 1.6;
+  color:black;
 }
 
 /* Add any other custom styles as needed */
